added some stat, internal only at the moment